--- a/tinylog-demo-plugin/build.properties
+++ b/tinylog-demo-plugin/build.properties
@@ -1,3 +1,5 @@
-bin.includes = .,META-INF/
+bin.includes = .,\
+               META-INF/,\
+               tinylog.properties
 output.. = target/classes/
 source.. = src/
