--- a/tinylog-demo-plugin/build.properties
+++ b/tinylog-demo-plugin/build.properties
@@ -1,5 +1,7 @@
 bin.includes = .,\
                META-INF/,\
+               fragment.e4xmi,\
+               plugin.xml,\
                tinylog.properties
 output.. = target/classes/
 source.. = src/
