Rename plug-in to follow the Eclipse naming scheme

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	
 	<modules>
 		<module>target-platform</module>
-		<module>tinylog-demo-plugin</module>
+		<module>org.tinylog.demo.plugin</module>
 	</modules>
 
 </project>
