Migrate tinylog to version 2.1.1

--- a/org.tinylog.demo.plugin/tinylog.properties
+++ b/org.tinylog.demo.plugin/tinylog.properties
@@ -1,6 +1,6 @@
-tinylog.format           = {date} {class}.{method}() {level}: {message}
+writer1        = console
+writer1.format = {date} {class}.{method}() {level}: {message}
 
-tinylog.writer1          = console
-
-tinylog.writer2          = file
-tinylog.writer2.filename = tinylog.log
+writer2        = file
+writer2.file   = tinylog.log
+writer2.format = {date} {class}.{method}() {level}: {message}
